# music-manager

./: .dockerignore  .env.example  .gitattributes  .gitignore  Cargo.toml  Dockerfile.api  README.md  docker-compose.yml
config/: default.toml
crates/mm-api/: Cargo.toml
crates/mm-api/src/: handlers.rs  main.rs  models.rs
crates/mm-api/src/handlers/: discovery.rs  enrichment.rs  mod.rs  platform_checker.rs  releases.rs  rip.rs  watchlist.rs
crates/mm-cli/: Cargo.toml
crates/mm-cli/src/: main.rs
crates/mm-cli/src/commands/: check.rs  export.rs  mod.rs  rip.rs  search.rs  stats.rs  watchlist.rs  worker.rs
crates/mm-config/: Cargo.toml
crates/mm-config/src/: lib.rs
crates/mm-copyright/: Cargo.toml
crates/mm-copyright/src/: lib.rs
crates/mm-db/: Cargo.toml
crates/mm-db/src/: lib.rs  models.rs  queries.rs
crates/mm-discogs/: Cargo.toml
crates/mm-discogs/src/: lib.rs  models.rs
crates/mm-encoder/: Cargo.toml
crates/mm-encoder/src/: lib.rs
crates/mm-matcher/: Cargo.toml
crates/mm-matcher/src/: lib.rs
crates/mm-platforms/: Cargo.toml
crates/mm-platforms/src/: bandcamp.rs  deezer.rs  itunes.rs  lib.rs  rate_limits.rs  spotify.rs  youtube.rs
crates/mm-ripper/: Cargo.toml
crates/mm-ripper/src/: accuraterip.rs  detector.rs  lib.rs  musicbrainz.rs  pipeline.rs
crates/mm-tagger/: Cargo.toml
crates/mm-tagger/src/: lib.rs
crates/mm-watcher/: Cargo.toml
crates/mm-watcher/src/: lib.rs
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  index.css  main.tsx
frontend/src/pages/: Dashboard.tsx  Jobs.tsx  Releases.tsx  RipJobs.tsx  Watchlist.tsx
migrations/: 001_initial.sql  002_discovery_jobs.sql  003_discovery_jobs_v2.sql  004_track_checks.sql  005_platform_error_state.sql  006_watchlist_marketplace.sql  007_popularity_scoring.sql  008_release_prices.sql
scripts/: dev-reset.sh  install-deps-linux.sh  install-deps-windows.ps1
