[package]
name = "mm-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "mm"
path = "src/main.rs"

[dependencies]
mm-config   = { workspace = true }
mm-db       = { workspace = true }
mm-discogs  = { workspace = true }
mm-platforms = { workspace = true }
mm-matcher  = { workspace = true }
mm-copyright = { workspace = true }
mm-ripper   = { workspace = true }
mm-encoder  = { workspace = true }
mm-tagger   = { workspace = true }
mm-watcher  = { workspace = true }
clap        = { workspace = true }
tokio       = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
uuid        = { workspace = true }
chrono      = { workspace = true }
sqlx        = { workspace = true }
