[package]
name = "mm-discogs"
version.workspace = true
edition.workspace = true

[dependencies]
mm-config   = { workspace = true }
reqwest     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }
governor    = { workspace = true }
