[package]
name = "mm-platforms"
version.workspace = true
edition.workspace = true

[dependencies]
mm-config   = { workspace = true }
mm-matcher  = { workspace = true }
reqwest     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
async-trait = { workspace = true }
futures     = { workspace = true }
governor    = { workspace = true }
rusty_ytdl  = { version = "0.7.4", default-features = false, features = ["search", "default-tls"] }
