[package]
name = "mm-watcher"
version.workspace = true
edition.workspace = true

[dependencies]
mm-config   = { workspace = true }
mm-db       = { workspace = true }
mm-discogs  = { workspace = true }
anyhow      = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
uuid        = { workspace = true }
serde       = { workspace = true }
sqlx        = { workspace = true }
